# intercept

./: .gitignore  Cargo.toml  justfile
src/: config.rs  lib.rs  main.rs  recorder.rs  syscall.rs
src/modules/: file.rs  mod.rs  pid.rs  rand.rs  time.rs
src/tracer/: mod.rs  operation.rs  tracee.rs
tests/: commands.rs
tests/bins/src/: rand.py
tests/bins/src/rand/c/: rand1.c  rand2.c
tests/bins/src/rand/go/: rand1.go  rand2.go
